Nav: Add lined variant, more vertical options, and new reverse modifier

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -178,7 +178,9 @@ $enable-navbar-dark:                        true !default;
 $enable-nav:                                true !default;
 $enable-nav-tabs:                           true !default;
 $enable-nav-pills:                          true !default;
+$enable-nav-lined:                          true !default;
 $enable-nav-vertical:                       true !default;
+$enable-nav-reverse:                        true !default;
 $enable-nav-fill:                           true !default;
 $enable-nav-justify:                        true !default;
 $enable-tab-content:                        true !default;
