--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1135,6 +1135,10 @@ $nav-pills-hover-color:         null !default;
 $nav-pills-active-bg:           $component-active-bg !default;
 $nav-pills-active-color:        $component-active-color !default;
 
+$nav-lined-gap:                 1rem !default;
+$nav-lined-border-width:        .125rem !default;
+$nav-lined-active-color:        $component-action-color !default;
+
 
 // Navbar
 // =====
