--- a/site/_includes/4.3/partials/algolia.html
+++ b/site/_includes/4.3/partials/algolia.html
@@ -38,4 +38,4 @@
 }());
 </script>
 <!-- Interim fix for Safari scroll issue: https://github.com/algolia/docsearch/issues/1260 -->
-<div class="position-fixed"><input type="text"></div>
+<div class="position-fixed" aria-hidden="true"><input type="text" tabindex="-1"></div>
