Utilities: Overflow - add more rules and x/y variants

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -309,6 +309,8 @@ $enable-utility-orientation-rotate:         true !default;
 $enable-utility-orientation-flip:           true !default;
 
 $enable-utility-overflow:                   true !default;
+$enable-utility-overflow-x:                 true !default;
+$enable-utility-overflow-y:                 true !default;
 
 $enable-utility-position:                   true !default;
 $enable-utility-position-fixed-top:         true !default;
