--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -7,6 +7,7 @@
 @import "utilities/float";
 @import "utilities/interaction";
 @import "utilities/link";
+@import "utilities/object-fit";
 @import "utilities/opacity";
 @import "utilities/orientation";
 @import "utilities/overflow";
