--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -302,6 +302,8 @@ $enable-utility-pointer-events:             true !default;
 
 $enable-utility-link-stretch:               true !default;
 
+$enable-utility-object-fit:                 true !default;
+
 $enable-utility-opacity:                    true !default;
 
 $enable-utility-orientation:                true !default;
