Utilities: Add new `z-index` utilities

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -372,3 +372,5 @@ $enable-utility-valign:                     true !default;
 $enable-utility-visibility:                 true !default;
 
 $enable-utility-vr:                         true !default;
+
+$enable-utility-zindex:                     true !default;
