--- a/scss/mixins/_screen-reader.scss
+++ b/scss/mixins/_screen-reader.scss
@@ -5,7 +5,6 @@
 // See: https://a11yproject.com/posts/how-to-hide-content/
 // See: https://kittygiraudel.com/2016/10/13/css-hide-and-seek/
 @mixin sr-only {
-    position: absolute !important;
     width: 1px !important;
     height: 1px !important;
     padding: 0 !important;
@@ -14,6 +13,11 @@
     clip: rect(0, 0, 0, 0) !important;
     white-space: nowrap !important;
     border: 0 !important;
+
+    // Fix for positioned table caption that could become anonymous cells
+    &:not(caption) {
+        position: absolute !important;
+    }
 }
 
 // Use in conjunction with .sr-only to only display content when it's focused.
