--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -407,7 +407,10 @@ $line-heights: (
 $font-weight-lighter:   lighter !default;
 $font-weight-light:     300 !default;
 $font-weight-normal:    400 !default;
+$font-weight-medium:    500 !default;
+$font-weight-semibold:  600 !default;
 $font-weight-bold:      700 !default;
+$font-weight-black:     900 !default;
 $font-weight-bolder:    bolder !default;
 $font-weight-base:      $font-weight-normal !default;
 
@@ -415,9 +418,10 @@ $font-weight-base:      $font-weight-normal !default;
 $font-weights: (
     "light":    $font-weight-light,
     "normal":   $font-weight-normal,
-    "semibold": 600,
+    "medium":   $font-weight-medium,
+    "semibold": $font-weight-semibold,
     "bold":     $font-weight-bold,
-    "black":    900,
+    "black":    $font-weight-black,
     "lighter":  $font-weight-lighter,
     "bolder":   $font-weight-bolder
 ) !default;
