--- a/scss/forms/_form-color.scss
+++ b/scss/forms/_form-color.scss
@@ -6,6 +6,7 @@
         width: auto;
         min-width: calc-input-height-inner($input-padding-y, $input-line-height);
         height: calc-input-height-inner($input-padding-y, $input-line-height);
+        padding: $input-padding-y;
         @include font-size($input-font-size);
         line-height: $input-line-height;
         color: $input-color;
@@ -17,5 +18,29 @@
         @include box-shadow($input-box-shadow);
         @include transition($input-transition);
         @include form-control-focus();
+
+        &:disabled {
+            background-color: $input-disabled-bg;
+            border-color: $input-disabled-border-color;
+            opacity: $input-disabled-opacity;
+        }
+
+        &:not(:disabled):not([readonly]) {
+            cursor: pointer;
+        }
+
+        &::-moz-color-swatch {
+            border: 0 !important; // stylelint-disable-line declaration-no-important
+            @include border-radius(subtract($input-border-radius, $input-border-width));
+        }
+
+        &::-webkit-color-swatch-wrapper {
+            padding: 0;
+        }
+
+        &::-webkit-color-swatch {
+            border: 0 !important; // stylelint-disable-line declaration-no-important
+            @include border-radius(subtract($input-border-radius, $input-border-width));
+        }
     }
 }
