Utilities-Display: Add `inline-grid`

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1476,7 +1476,7 @@ $zindex-modal:              1065 !default;
 
 
 // Utilities
-$utility-display:           block, flex, inline, inline-block, inline-flex, grid, table, table-row, table-cell, none !default;
+$utility-display:           block, flex, inline, inline-block, inline-flex, grid, inline-grid, table, table-row, table-cell, none !default;
 $utility-overflow:          auto, hidden, scroll, visible !default;
 $utility-overflow-x:        auto, hidden, scroll, visible !default;
 $utility-overflow-y:        auto, hidden, scroll, visible !default;
