Docs: Add `target="_blank" rel="noopener"` to all external links

--- a/site/_includes/4.3/partials/topnav.html
+++ b/site/_includes/4.3/partials/topnav.html
@@ -36,12 +36,12 @@
     </li>
     {%- endif -%}
     <li class="nav-item">
-      <a href="{{ site.twitter.home }}" class="nav-link px-0_5" aria-label="Twitter">
+      <a href="{{ site.twitter.home }}" target="_blank" rel="noopener" class="nav-link px-0_5" aria-label="Twitter">
         {% include "./icons/twitter.svg", width: "16", height: "16", class: "cf-nav-img" %}
       </a>
     </li>
     <li class="nav-item">
-      <a href="{{ site.repo }}" class="nav-link px-0_5" aria-label="Github">
+      <a href="{{ site.repo }}" target="_blank" rel="noopener" class="nav-link px-0_5" aria-label="Github">
         {% include "./icons/github.svg", width: "16", height: "16", class: "cf-nav-img" %}
       </a>
     </li>
