--- a/site/_includes/4.3/partials/footer.html
+++ b/site/_includes/4.3/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="cf-footer fs-small py-1">
   <div class="container">
     <ul class="list list-horizontal font-weight-bold">
-      <li class="pe-0_5"><a href="{{ site.path}}/about/overview/">About <span class="sr-only">Figuration</span></a></li>
-      <li class="px-0_5"><a href="{{ site.repo }}">GitHub</a></li>
-      <li class="ps-0_5"><a href="{{ site.twitter.home }}">Twitter</a></li>
+      <li class="pe-0_5"><a href="{{ site.path}}/about/overview/" target="_blank" rel="noopener">About <span class="sr-only">Figuration</span></a></li>
+      <li class="px-0_5"><a href="{{ site.repo }}" target="_blank" rel="noopener">GitHub</a></li>
+      <li class="ps-0_5"><a href="{{ site.twitter.home }}" target="_blank" rel="noopener">Twitter</a></li>
     </ul>
     <p>
       <strong>Latest version:</strong> {{ site.version.current }}
@@ -11,13 +11,13 @@
       <a href="{{ site.path }}/versions/">Previous versions</a>
     </p>
     <p>
-      &copy; 2013-{{ 'now' | date: "%Y" }} <a href="http://www.cast.org/">CAST, Inc.</a>
+      &copy; 2013-{{ 'now' | date: "%Y" }} <a href="http://www.cast.org/" target="_blank" rel="noopener">CAST, Inc.</a>
       <br>
-      Portions: &copy; 2011-{{ 'now' | date: "%Y" }} The Bootstrap Authors, Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
+      Portions: &copy; 2011-{{ 'now' | date: "%Y" }} The Bootstrap Authors, Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE" target="_blank" rel="noopener">the MIT license</a> or <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="noopener">CC BY 3.0</a>.
     </p>
     <p>
-      Code licensed <a rel="license" href="{{ site.repo }}/blob/master/LICENSE">MIT</a>,
-      docs <a rel="license" href="{{ site.repo }}/blob/master/site/LICENSE">CC BY 4.0</a>.
+      Code licensed <a rel="license" href="{{ site.repo }}/blob/master/LICENSE" target="_blank" rel="noopener">MIT</a>,
+      docs <a rel="license" href="{{ site.repo }}/blob/master/site/LICENSE" target="_blank" rel="noopener">CC BY 4.0</a>.
     </p>
 
     <div class="border-t pt-1">
@@ -28,7 +28,7 @@
             <img src="{{ site.path }}/assets/aem/aem-logo.png" width="40" height="40" alt="AEM logo">
           </div>
           <div class="media-body">
-            <span class="font-weight-bold"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br>
+            <span class="font-weight-bold"><a href="http://aem.cast.org/" target="_blank" rel="noopener">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br>
             <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
           </div>
         </div>
