--- a/site/_includes/4.3/partials/footer.html
+++ b/site/_includes/4.3/partials/footer.html
@@ -16,8 +16,8 @@
       Portions: &copy; 2011-{{ 'now' | date: "%Y" }} The Bootstrap Authors, Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE" target="_blank" rel="noopener">the MIT license</a> or <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="noopener">CC BY 3.0</a>.
     </p>
     <p>
-      Code licensed <a rel="license" href="{{ site.repo }}/blob/master/LICENSE" target="_blank" rel="noopener">MIT</a>,
-      docs <a rel="license" href="{{ site.repo }}/blob/master/site/LICENSE" target="_blank" rel="noopener">CC BY 4.0</a>.
+      Code licensed <a href="{{ site.repo }}/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>,
+      docs <a href="{{ site.repo }}/blob/master/site/LICENSE" target="_blank" rel="license noopener">CC BY 4.0</a>.
     </p>
 
     <div class="border-t pt-1">
