--- a/site/assets/4.3/scss/_topnav.scss
+++ b/site/assets/4.3/scss/_topnav.scss
@@ -7,6 +7,9 @@
 .cf-content {
     a,
     button,
+    input,
+    select,
+    textarea,
     h2,
     h3,
     h4,
@@ -34,6 +37,9 @@
         .cf-content {
             a,
             button,
+            input,
+            select,
+            textarea,
             h2,
             h3,
             h4,
