--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -46,7 +46,7 @@
 @mixin row-cols($count) {
     > * {
         flex: 0 0 auto;
-        width: divide(100%, $count);
+        width: percentage(divide(1, $count));
     }
 }
 
