Reboot: Add color variable for `<mark>`

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -451,6 +451,7 @@ $initialism-font-size:  .875em !default;
 $text-muted:        $uibase-500 !default;
 
 $mark-padding:      .125em .25em !default;
+$mark-color:        $body-color !default;
 $mark-bg:           #ff0 !default;
 
 $hr-margin-y:       1rem !default;
