working gen - tables is breaking at the moment

--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -1,3 +1,7 @@
-@use "functions/color-util";
-@use "functions/palette";
-@use "functions/rem-calc";
+@forward "functions/assert";
+@forward "functions/calc-util";
+@forward "functions/color-util";
+@forward "functions/map-util";
+@forward "functions/palette";
+@forward "functions/rem-calc";
+@forward "functions/str-util";
